# pokeapi-testing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  configuration.md  schemas.md  software-test-plan.md  test-cases.md
src/: __init__.py
src/api/: __init__.py  pokemon_client.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  base_api_client.py
src/models/: __init__.py  base.py  pokemon.py
src/utils/: __init__.py  data_loader.py  logger.py
testdata/: pokemon_test_data.py
tests/: conftest.py
tests/api/: test_pokemon.py
